# openklas

./: .dockerignore  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  healthcheck.py  main.py  pyproject.toml  requirements.txt  validate-env.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  a3e7c2b9f1d5_rag_embedding_dim_1024.py  b1c2d3e4f5a6_add_oauth_tokens.py  cb64e8bea21e_add_lecture_materials.py  f7a2b9c4d1e3_add_rag_documents.py
app/: __init__.py
app/api/: deps.py
app/api/routes/: auth.py  eclass_lectures.py  homework.py  lectures.py  oauth.py  profile.py  rag.py  recorded_lectures.py  timetable.py  workflow.py
app/core/: config.py  encryption.py  rate_limit.py  security.py  session_store.py
app/db/: session.py
app/models/: document.py  lecture.py  oauth.py  user.py
app/schemas/: auth.py  eclass_lecture.py  homework.py  lecture.py  profile.py  rag.py  recorded_lecture.py  session.py  timetable.py  university_schedule.py  user.py  workflow.py
app/services/: auth_service.py  embedding_service.py  klas_service.py  lecture_service.py  progress_service.py  rag_service.py  summarize_service.py  watch_service.py
scripts/: klas_daily_note.py  klas_watch.py  verify_per_user_isolation.py  verify_redis_sessions.py
